# bsai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTAINERIZATION.md  CONTAINERIZATION_SUMMARY.md  DOCKERFILE_CLARIFICATION.md  DOCKER_GUIDE.md  Dockerfile  PROJECT_SUMMARY.md  README.md  TREE.txt  alembic.ini  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  package-lock.json  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.devcontainer/scripts/: on-create.sh  post-create.sh  post-start.sh
.github/codeql/: codeql-config.yml
.github/codespaces/: devcontainer.json
.github/workflows/: build-images.yml  ci.yml  cleanup.yml  release.yml  security.yml
bsai/: __init__.py
bsai/cli/: __init__.py  main.py
bsai/core/: __init__.py
bsai/core/agents/: __init__.py
bsai/core/config/: __init__.py  secrets.py
bsai/core/security/: __init__.py
bsai/utils/: __init__.py  logger.py
docker/: Dockerfile.prod
docs/: index.md
docs/architecture/: database_schema.md  modules.md  observability.md  overview.md
docs/deployment/: codespaces.md
docs/guides/: installation.md
infra/keycloak/: README.md  bsai-realm.json
migrations/: env.py
migrations/versions/: 20251226_0700_001_initial_schema.py  20251226_0810_202512260810_initial_database_schema_with_all_models.py  20251226_0930_add_custom_llm_models_table.py  20251226_0945_add_api_config_to_custom_llm_models.py  20251230_0904_05964df676b8_add_description_and_acceptance_criteria_.py  20251230_0951_ee8e2ece8955_update_generated_prompts_add_strategy_.py  20251231_1000_add_artifacts_table.py  20260102_0918_8ff30c016270_rename_language_to_kind_in_artifacts_.py  20260106_1500_add_mcp_support_tables.py  20260111_1313_fd3b4221f251_add_agent_steps_table_and_milestone_.py  20260115_1000_add_episodic_memory_and_pgvector.py  20260119_artifact_task_level_snapshots.py  20260120_0646_de1a4177b65e_add_handover_context_to_tasks_table.py  20260120_0730_add_milestone_sequence_unique_constraint.py  20260123_0237_7a736f31dadb_convert_episodic_memory_timestamps_to_.py  20260203_0623_57743a2ae4e1_add_project_plans_table.py
monitoring/: prometheus.yml
scripts/: init-db.sql  load-env.sh
secrets/: README.md  secret-manager.py  validators.py
src/agent/: CLAUDE.md
src/agent/api/: __init__.py  auth.py  config.py  dependencies.py  exceptions.py  handlers.py  main.py  middleware.py
src/agent/cache/: redis_client.py  session_cache.py
src/agent/container/: __init__.py  container.py
src/agent/core/: __init__.py  agent.py  architect.py  artifact_extractor.py  conductor.py  meta_prompter.py  qa_agent.py  responder.py  summarizer.py  worker.py
src/agent/db/: __init__.py  session.py
src/agent/events/: types.py
src/agent/graph/: __init__.py  broadcast.py  checkpointer.py  edges.py  nodes.py  state.py  utils.py  workflow.py
src/agent/llm/: __init__.py  builtin_tools.py  client.py  logger.py  registry.py  router.py  schemas.py
src/agent/mcp/: __init__.py  executor.py  security.py  utils.py
src/agent/memory/: __init__.py  embedding_service.py  exceptions.py  helpers.py  manager.py  schemas.py
src/agent/prompts/: __init__.py  _macros.yaml  conductor.yaml  keys.py  manager.py  meta_prompter.yaml  qa_agent.yaml  responder.yaml  summarizer.yaml  worker.yaml
src/agent/services/: __init__.py  agent_step_service.py  breakpoint_service.py  dependency_graph.py  execution_engine.py  plan_service.py  qa_runner.py
src/agent/tools/: file.py
src/agent/tracing/: __init__.py  client.py
src/agent_platform/: CLAUDE.md  main.py
src/agent_platform/core/: CLAUDE.md  config.py
src/agent_platform/platform/: CLAUDE.md
src/bsai/: CLAUDE.md
src/bsai/api/: auth.py  config.py  dependencies.py  exceptions.py  handlers.py  main.py
src/bsai/cache/: __init__.py  redis_client.py
src/bsai/container/: __init__.py  container.py
src/bsai/core/: architect.py  artifact_extractor.py  qa_agent.py  responder.py  worker.py
src/bsai/db/: session.py
src/bsai/events/: __init__.py  bus.py  types.py
src/bsai/graph/: __init__.py  checkpointer.py  state.py  utils.py  workflow.py
src/bsai/llm/: builtin_tools.py  client.py  logger.py  models.py  registry.py  router.py
src/bsai/mcp/: __init__.py  executor.py  security.py  utils.py
src/bsai/memory/: embedding_service.py  helpers.py  manager.py
src/bsai/prompts/: architect.yaml  keys.py  manager.py  memory.yaml
src/bsai/services/: __init__.py  agent_step_service.py  breakpoint_service.py  plan_service.py  qa_runner.py
src/bsai/tracing/: __init__.py  client.py
test/: __init__.py  conftest.py  test_basic.py
test/security/: __init__.py  test_crypto.py  test_secret.py
tests/: conftest.py  test_agent.py  test_file_tools.py  test_llm_client.py  test_workflow.py
tests/api/: conftest.py  test_auth.py  test_config.py  test_dependencies.py  test_exceptions.py  test_handlers.py  test_health.py  test_main.py  test_middleware.py  test_schemas.py  test_websocket_manager.py
tests/api/routers/: test_artifacts.py  test_mcp.py  test_memories.py  test_milestones.py  test_sessions.py  test_snapshots.py  test_tasks.py  test_websocket.py
tests/api/services/: test_session_service.py  test_task_service.py
tests/api/websocket/: test_handlers.py  test_manager.py  test_ws_handlers.py
tests/e2e/: test_task_lifecycle.py
tests/integration/: conftest.py  test_mcp.py  test_mcp_integration.py  test_mcp_repository.py  test_websocket_streaming.py  test_workflow_execution.py
tests/performance/: locustfile.py
tests/unit/agents/: __init__.py  test_conductor.py  test_qa_agent.py  (+3 more)
web/: CLAUDE.md  jest.config.js  next.config.js  next.config.mjs  package-lock.json  package.json
(+312 files in other folders)
